# Miniscience

./: .gitignore  README.md
Lab1/: CMakeLists.txt
Lab1/Step1/: thoros.cpp
Lab1/Step2/: spoon_mesh.cpp
Lab1/Step_0/: circle.cpp  cube.cpp  cylindr.cpp
Lab2/: CMakeLists.txt  Coffee_Spoon.stl  spoon.cpp
Lab3/: navier_stokes_cylinder.py  video.txt
